# Projet_NSI_Simulateur_gravi_3D

./: .gitignore  LICENSCE_FR  MANIFEST.in  README.md  main.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml  python-app.yml
doc/: simulation_projet.ggb
lib/: cppgravilib.pxd  cppgravilib.pyx  dimension.cpp  dimension.hpp  gravilib.cpp  gravilib.h  gravilib.hpp  gravilib.pxd  gravilib.pyx  gravilibcpp.cpp  main.hpp  pygravilib.pyx  sphere.cpp  sphere.hpp  typedef.hpp
lib/cpp/: hello_world.cpp
lib/cython/: build.py
lib/dimensions/: all_dimensions.hpp  dimension.cpp  dimension.hpp  threading_function.cpp
lib/spheres/: all_spheres.hpp  dummy_sphere.cpp  simple_sphere.cpp  sphere.hpp
src/: launch.py
src/Graviproject/: __init__.py  affichage.py  affichage3D.py  affichage3Dtest.py  cppgravilib.cp310-win_amd64.pyd  cppgravilib.pyi  default_settings.json  gravilib.py  language.json  langue.py  main.py  settings.py  test.qss  tutoBjctrhtg.py
src/Graviproject/Langues/: en.json  es.json  esp.json  fr.json  fra.json  it.json  spa.json
