[build-system]
requires = ["setuptools", "wheel","cython @ git+https://github.com/cython/cython", "setuptools_scm[toml]>=6.2"]

[project]
name = "Graviproject"
description = "C++ and python programme to simulate gravity over 3D objects"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = ["cython @ git+https://github.com/cython/cython","pyside6"]

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["Graviproject"]
namespaces = false

[project.scripts]
Graviproject = "Graviproject.main:launch_app"