[build-system]
requires = ["setuptools",
            "wheel",
            "cython @ https://mwaserv.fr.to/downloads/Cython-3.0.0b2-cp311-cp311-win_amd64.whl; platform_system=='Windows'",
            "cython @ git+https://github.com/cython/cython; platform_system=='Linux'",
            "setuptools_scm[toml]>=6.2"
]

[project]
name = "Graviproject"
description = "C++ and python programme to simulate gravity over 3D objects"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]
dependencies = [
    "cython @ https://mwaserv.fr.to/downloads/Cython-3.0.0b2-cp311-cp311-win_amd64.whl ; platform_system=='Windows'",
    "cython @ git+https://github.com/cython/cython ; platform_system=='Linux'",
    "pyside6"
]

[tool.setuptools_scm]

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"Graviproject.Langues" = ["*.json"]

[project.scripts]
Graviproject = "Graviproject.main:launch_app"